--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
     "name": "java2ts-examples",
     "version": "1.0.0",
-    "description": "A project to demonstrate the user of java2typescript",
+    "description": "A project to demonstrate the use of java2typescript",
     "scripts": {
-        "simple": "java2ts src/simple/simple.json"
+        "simple": "java2ts src/simple/simple.json",
+        "antlr4": "java2ts src/antlr4/antlr4.json",
+        "jdk-tests": "ts-node-esm src/jdk-tests/convertJDKTests.ts",
+        "link java2ts": "npm link java2typescript",
+        "unlink java2ts": "npm unlink java2typescript",
+        "eslint": "eslint ."
     },
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/mike-lischke/java2ts-examples.git"
@@ -25,6 +31,7 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "5.57.0",
         "@typescript-eslint/parser": "5.57.0",
+        "eslint": "8.37.0",
         "eslint-plugin-import": "2.27.5",
         "eslint-plugin-jsdoc": "40.1.0",
         "eslint-plugin-prefer-arrow": "1.2.3",
